--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -53,7 +53,8 @@
       "button1": "Set",
       "button2": "a",
       "button3": "call"
-    }
+    },
+    "ProjectsCta": "My projects"
   },
   "about": {
     "Introduction": {
